--- a/DesignPattern/AdapterPattern/适配器模式.md
+++ b/DesignPattern/AdapterPattern/适配器模式.md
@@ -19,7 +19,7 @@
 
 #### 适用场景
 * 以前开发的系统存在满足新系统功能需求的类, 但其接口同新系统的接口不一致
-* 使用第三方提供的组件，但组件接口定义和自己要求的接口定义不同
+* 使用第三方提供的组件, 但组件接口定义和自己要求的接口定义不同
 
 #### 参考 - [http://c.biancheng.net/view/1361.html](http://c.biancheng.net/view/1361.html)
 
