--- a/DesignPattern/CompositePattern/组合模式.md
+++ b/DesignPattern/CompositePattern/组合模式.md
@@ -1,6 +1,6 @@
 ### 组合模式 - (整体-部分模式)
 #### 定义
-    将对象组合成树状的层次结构的模式, 用来表示“整体-部分”的关系, 
+    将对象组合成树状的层次结构的模式, 用来表示"整体-部分"的关系, 
     使用户对单个对象和组合对象具有一致的访问性, 属于结构型设计模式.
 
 #### 分类
@@ -9,7 +9,7 @@
 
 #### 优点
 * 使得客户端代码可以一致地处理单个对象和组合对象, 无须关心自己处理的是单个对象, 还是组合对象, 这简化了客户端代码
-* 更容易在组合体内加入新的对象, 客户端不会因为加入了新的对象而更改源代码,满足"开闭原则"
+* 更容易在组合体内加入新的对象, 客户端不会因为加入了新的对象而更改源代码, 满足"开闭原则"
 
 #### 缺点
 * 设计较复杂, 客户端需要花更多时间理清类之间的层次关系
