feat(笔记更新): update

--- a/DesignPattern/TemplateMethodPattern/模版方法模式.md
+++ b/DesignPattern/TemplateMethodPattern/模版方法模式.md
@@ -1,10 +1,9 @@
 ### 模版方法模式
 #### 定义
-    定义一个操作中的算法骨架, 而将算法的一些步骤延迟到子类中, 
-    使得子类可以不改变该算法结构的情况下重定义该算法的某些特定步骤,
-    行为模式.
-
-    用到了虚函数的多态性技术以及"不用调用我, 让我来调用你"的反向控制技术.
+> 定义一个操作中的算法骨架, 而将算法的一些步骤延迟到子类中, \
+> 使得子类可以不改变该算法结构的情况下重定义该算法的某些特定步骤, \
+> 行为模式. \
+> 用到了虚函数的多态性技术以及"不用调用我, 让我来调用你"的反向控制技术.
 
 #### 结构
 ##### 抽象类/抽象模板
@@ -12,7 +11,7 @@
 * 基本方法 - 抽象方法, 具体方法, 钩子方法
 
 ##### 具体子类/具体实现
-    实现抽象类中所定义的抽象方法和钩子方法
+> 实现抽象类中所定义的抽象方法和钩子方法
 
 #### 优点
 * 它封装了不变部分, 扩展可变部分 - 不变部分的算法封装到父类中实, 而把可变部分算法由子类继承实现, 便于子类继续扩展
@@ -29,6 +28,5 @@
 * 当多个子类存在公共的行为时, 可以将其提取出来并集中到一个公共父类中以避免代码重复
 * 当需要控制子类的扩展时, 模板方法只在特定点调用钩子操作
 
-#### 参考 - [http://c.biancheng.net/view/1376.html](http://c.biancheng.net/view/1376.html)
-
-#### [源码](./__init__.py)
+#### 参考
+* [http://c.biancheng.net/view/1376.html](http://c.biancheng.net/view/1376.html)
