--- a/DesignPattern/AdapterPattern/适配器模式.md
+++ b/DesignPattern/AdapterPattern/适配器模式.md
@@ -1,7 +1,7 @@
 ### 适配器模式
 #### 定义
-    将一个类的接口转换成客户希望的另外一个接口, 
-    使得原本由于接口不兼容而不能一起工作的那些类能一起工作.
+> 将一个类的接口转换成客户希望的另外一个接口, \
+> 使得原本由于接口不兼容而不能一起工作的那些类能一起工作.
 
 #### 分类
 * 类结构型模式 - 耦合度高, 需要了解现有类内部结构, 可以采用多重继承方式实现
@@ -21,6 +21,5 @@
 * 以前开发的系统存在满足新系统功能需求的类, 但其接口同新系统的接口不一致
 * 使用第三方提供的组件, 但组件接口定义和自己要求的接口定义不同
 
-#### 参考 - [http://c.biancheng.net/view/1361.html](http://c.biancheng.net/view/1361.html)
-
-#### [源码](./__init__.py)
+#### 参考
+* [http://c.biancheng.net/view/1361.html](http://c.biancheng.net/view/1361.html)
