--- a/DesignPattern/CompositePattern/组合模式.md
+++ b/DesignPattern/CompositePattern/组合模式.md
@@ -1,7 +1,7 @@
 ### 组合模式 - (整体-部分模式)
 #### 定义
-    将对象组合成树状的层次结构的模式, 用来表示"整体-部分"的关系, 
-    使用户对单个对象和组合对象具有一致的访问性, 属于结构型设计模式.
+> 将对象组合成树状的层次结构的模式, 用来表示"整体-部分"的关系, \
+> 使用户对单个对象和组合对象具有一致的访问性, 属于结构型设计模式.
 
 #### 分类
 * 类结构型模式 - 耦合度高, 需要了解现有类内部结构, 可以采用多重继承方式实现
@@ -20,6 +20,5 @@
 * 在需要表示一个对象整体与部分的层次结构的场合
 * 要求对用户隐藏组合对象与单个对象的不同, 用户可以用统一的接口使用组合结构中的所有对象的场合
 
-#### 参考 - [http://c.biancheng.net/view/1373.html](http://c.biancheng.net/view/1373.html)
-
-#### [源码](./__init__.py)
+#### 参考
+* [http://c.biancheng.net/view/1373.html](http://c.biancheng.net/view/1373.html)
